<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="view.RecoverPasswordActivity">

    <TextView
        android:id="@+id/textView7"
        style="@style/title"
        android:text="@string/title_recover_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.070">
    </TextView>

    <TextView
        android:id="@+id/textView6"
        style="@style/label"
        android:text="@string/label_email"
        app:layout_constraintBottom_toTopOf="@+id/edtEmailSendToken"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.520"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.980">
    </TextView>

    <EditText
        android:id="@+id/edtEmailSendToken"
        style="@style/edit_text"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/btnSendToken"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.520"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6">
    </EditText>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSendToken"
        style="@style/button_style"
        android:text="@string/send_code_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.950">
    </androidx.appcompat.widget.AppCompatButton>

</androidx.constraintlayout.widget.ConstraintLayout>