<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="view.AlterPasswordActivity">

    <TextView
        style="@style/title"
        android:text="@string/alter_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.070">
    </TextView>

    <TextView
        android:id="@+id/textView9"
        style="@style/label"
        android:text="@string/label_received_code"
        app:layout_constraintBottom_toTopOf="@+id/edtCodeResetToken"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.520"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.990">
    </TextView>

    <EditText
        android:id="@+id/edtCodeResetToken"
        style="@style/edit_text"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.520"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.980">
    </EditText>

    <TextView
        android:id="@+id/textView10"
        style="@style/label"
        android:text="@string/label_new_password"
        app:layout_constraintBottom_toTopOf="@+id/edtNewPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.520"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.990">
    </TextView>

    <EditText
        android:id="@+id/edtNewPassword"
        style="@style/edit_text"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/btnResetPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.750">
    </EditText>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnResetPassword"
        style="@style/button_style"
        android:text="@string/alter_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.950">
    </androidx.appcompat.widget.AppCompatButton>

</androidx.constraintlayout.widget.ConstraintLayout>