<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="view.RegisterPontoActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/appBarLayout">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/textView8"
        style="@style/title"
        android:text="@string/title_register_ponto"
        app:layout_constraintBottom_toTopOf="@+id/btnRegisterPonto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1">

    </TextView>

    <TextView
        android:id="@+id/tvSalutation"
        style="@style/salutation"
        app:layout_constraintBottom_toTopOf="@+id/tvLogout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.188">

    </TextView>

    <TextView
        android:id="@+id/tvLogout"
        style="@style/style_text_view"
        android:gravity="center"
        android:text="@string/out"
        app:layout_constraintBottom_toTopOf="@+id/btnRegisterPonto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.983">

    </TextView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegisterPonto"
        style="@style/button_style"
        android:text="@string/ponto_register_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.950">
    </androidx.appcompat.widget.AppCompatButton>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:padding="16dp"
        android:layout_width="408dp"
        android:layout_height="366dp"
        app:layout_constraintBottom_toTopOf="@+id/tvLogout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSalutation"/>


</androidx.constraintlayout.widget.ConstraintLayout>